# ComfyUI-SAM3DBody

./: .gitignore  README.md  THIRD_PARTY_NOTICES  __init__.py  constants.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: publish.yml  test-install.yml
lib/: blender_apply_pose.py  blender_export_multi.py  blender_export_sam3d_fbx.py
nodes/: __init__.py  base.py
nodes/processing/: export.py  load_model.py  preview.py  process.py  process_multiple.py  skeleton_io.py  visualize.py
sam_3d_body/: sam_3d_body_estimator.py
sam_3d_body/models/backbones/: dinov3.py
sam_3d_body/models/meta_arch/: sam3d_body.py
web/js/: sam3d_preview_mesh.js  sam3d_skeleton_viewer.js  viewer_inline.js
workflows/: multiple_masks.json  rigging.json  workflow.json
